Fixed coffee button

--- a/style.css
+++ b/style.css
@@ -654,6 +654,12 @@ header .icon.cancel-btn {
   box-shadow: 140px -140px #cc3f47;
   background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
 }
+/* toggleButton----------------------- */
+#theme{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
 
 
 
@@ -807,6 +813,13 @@ header .icon.cancel-btn {
     width: 40px;
   
   }
+  #theme{
+    position: static;
+  }
+  #bmc-wbtn{
+    right: 100px !important;
+    bottom: 5px !important;
+  }
 }
 
 
@@ -951,9 +964,3 @@ body {
 
 
 
-/* toggleButton----------------------- */
-#theme{
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
