--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Comforter+Brush&family=Dancing+Script:wght@600;700&family=Great+Vibes&family=Mrs+Saint+Delafield&family=Rajdhani:wght@600&family=Rock+Salt&display=swap'); */
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2&family=Caveat:wght@600&family=Comforter+Brush&family=Dancing+Script:wght@600;700&family=Great+Vibes&family=Mrs+Saint+Delafield&family=Rajdhani:wght@600&family=Rock+Salt&family=Special+Elite&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Sacramento&display=swap');
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   /* background-color: var(--white); */
+}
+span {
+  color: red;
 }
 :root {
   --white: #fff; 
@@ -16,9 +20,6 @@
 
 }
 
-span {
-  color: red;
-}
 .flex-h {
   display: flex;
   flex-direction: row;
@@ -120,13 +121,20 @@ header ul li a:hover {
   justify-content: center;
   width: 100%;
   height: 100vh;
+  font-family: 'Sacramento', cursive;
 }
 .main .one h1 {
-  font-size: 55px;
+  font-size: 75px;
   margin-top: 120px;
 }
 .main .one h2 {
-  font-size: 50px;
+  font-size: 60px;
+  
+}
+.main .one .dynamic span{
+  font-family: 'Tillana', system-ui;
+  font-family: 'Aldrich', sans-serif;
+  color: rgb(255, 255, 255);
 }
 
 .two {
@@ -820,6 +828,7 @@ header .icon.cancel-btn {
     right: 100px !important;
     bottom: 5px !important;
   }
+  
 }
 
 
