--- a/style.css
+++ b/style.css
@@ -39,8 +39,8 @@ body {
   background: var(--white);
   /* max-width: 100vw;? */
 
+  width: 100vw;
   overflow-x: hidden;
-  width: 100%;
 }
 header {
   position: fixed;
@@ -103,7 +103,7 @@ header ul li a {
   letter-spacing: 2px;
   font-weight: 500px;
   transition: 0.6s;
-  font-size: 20px;
+  font-size: 1rem;
   font-weight: bold;
 }
 header ul li a:hover {
@@ -113,6 +113,7 @@ header ul li a:hover {
   color: white;
   font-family: "Special Elite", cursive;
   background-image: url("images/mybg.jpeg");
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
@@ -124,17 +125,18 @@ header ul li a:hover {
   font-family: 'Sacramento', cursive;
 }
 .main .one h1 {
-  font-size: 75px;
+  font-size: 4rem;
   margin-top: 120px;
 }
 .main .one h2 {
-  font-size: 60px;
+  font-size: 4rem;
   
 }
 .main .one .dynamic span{
   font-family: 'Tillana', system-ui;
   font-family: 'Aldrich', sans-serif;
   color: rgb(255, 255, 255);
+  font-size: 2.5rem;
 }
 
 .two {
